# wasm-segment-anything-dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  package.json
.cargo/: config.toml
.github/workflows/: gh_pages.yml
assets/: dist.css  segment_anything.css  sidebar.css
docs/: index.html
docs/assets/: dist-dxh8dc36fe43fdc31a.css  dist.css  segment-anything-dxh45b3e1fc74813edd.js  segment-anything-dxh4d5c1bd9b496e99e.js  segment-anything-dxh6389d2655c8f5a3.js  segment-anything-dxhfb2cf08e5365d44.js  segment_anything-dxh2b12a7bb89b01c1c.css  sidebar-dxhe13d4bb88cd887f.css  sidebar.css
docs/wasm/: segment-anything.d.ts  segment-anything.d.ts.br  segment-anything.js  segment-anything.js.br  segment-anything_bg.wasm.br  segment-anything_bg.wasm.d.ts  segment-anything_bg.wasm.d.ts.br
docs/wasm/snippets/dioxus-interpreter-js-53424282ea002554/: inline0.js.br
src/: main.rs
src/segment_anything/: lasso.rs  mask.rs  mod.rs  model.rs  sidebar.rs  ui.rs
